Apply some fixes on invite friends popup
- Alert visibility duration decreased from 16s to 8s because it was too long
- Fix challenge port request according to mismatches with Daify's REST API

--- a/src/app/features/challenge/components/invite-friends/invite-friends.component.scss
+++ b/src/app/features/challenge/components/invite-friends/invite-friends.component.scss
@@ -5,7 +5,7 @@
   .popup {
     padding: 32px 0;
     width: 520px;
-    height: 75%;
+    height: 90%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     border-radius: 8px;
     background-color: #FFF;
+    overflow-x: auto;
 
     .popup-head {
       padding: 0 32px;
