--- a/src/app/shared/components/alert-box/alert-box.component.scss
+++ b/src/app/shared/components/alert-box/alert-box.component.scss
@@ -20,11 +20,12 @@
   position: fixed;
   right: 0;
   bottom: 64px;
+  z-index: 999;
   display: flex;
   align-items: center;
   box-sizing: border-box;
   box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
-  animation: popup-anim 16s forwards;
+  animation: popup-anim 8s forwards;
   border-radius: 16px 0 0 16px;
   background-color: #FFF;
 
